Corrected problem with playlist overlapping footer

--- a/client/src/styles/scss/dashboard.scss
+++ b/client/src/styles/scss/dashboard.scss
@@ -4,10 +4,9 @@ $font: 'Open Sans', sans-serif;
 	top: 0;
 	left: 0;
 	margin-top: 110px;
-	min-height: 80vh;
 	background-size: cover; 
 	background-image: url("https://previews.123rf.com/images/nikkytok/nikkytok1506/nikkytok150600052/41504664-metal-mesh-of-speaker-grill-texture-Stock-Photo-honeycomb.jpg");
-	overflow: scroll;
+	overflow: auto;
 	z-index: -2;
 }
 
@@ -110,7 +109,8 @@ $font: 'Open Sans', sans-serif;
 				color: #dbdfe1;
 				background-color: #1f1f1f;
 				min-width: 100%;
-				max-height: 20vh;
+				min-height: 10px;
+				max-height: 40vh;
 
 				.fa-play {
 					font-size: 1.4em;
